multicloud/lab4/modules/saopaulo_core/405-vpc.tf
#
############################################
# São Paulo VPC
############################################

resource "aws_vpc" "this" {

  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(
    var.tags,
    {
      Name = var.vpc_name
    }
  )
}

############################################
# Internet Gateway
############################################

resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-sp-igw"
    }
  )
}
